force-app/main/default/objects/Decision_Rule__c/Decision_Rule__c.object-meta.xml
<CustomObject>
    <description>Editable scheduling decision rules (weight rows and optimization rules) read by the Auto-Schedule optimizer and the FSL scheduling policy at run time. Edited in-app from the LOVING Field Services Console Decision Rules tab.</description>
    <label>Decision Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>