force-app/main/default/objects/Decision_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false, the optimizer ignores this rule. Only active Weight rows count toward the 100% total.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>