force-app/main/default/objects/Decision_Rule__c/fields/Applies_To__c.field-meta.xml
<CustomField>
    <fullName>Applies_To__c</fullName>
    <description>Scope the rule applies to: All crews, a specific zone, or a specific crew.</description>
    <defaultValue>"All crews"</defaultValue>
    <label>Applies To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>