force-app/main/default/objects/Decision_Rule__c/fields/Favors__c.field-meta.xml
<CustomField>
    <fullName>Favors__c</fullName>
    <description>What a weight rule favors (e.g. "Minimize drive time"). Used for Weight rules.</description>
    <label>Favors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>