force-app/main/default/objects/Decision_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <description>Weight = scoring weight row (must total 100% across active rows). Optimization = a constraint the optimizer applies.</description>
    <label>Rule Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weight</fullName>
                <default>true</default>
                <label>Weight</label>
            </value>
            <value>
                <fullName>Optimization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>